# mcp-shellcheck

./: .gitignore  ARCHITECTURE.md  CE.md  CHANGELOG.md  CONFIG_EXAMPLES.md  LICENSE  PROJECT_SYMBOLS.md  README.md  RELEASE_NOTES.md  context7.json  glama.json  install.sh  pyproject.toml  requirements.txt  shellcheck_mcp_server.py
.github/workflows/: publish.yml
docs/: CONFIG_EXAMPLES.md  MIGRATION.md
tests/: test_shellcheck_mcp_server.py  test_stress_escape.py  test_stress_json.py
