[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-shellcheck"
version = "0.2.0"
description = "ShellCheck MCP Server for AI code analysis"
readme = "README.md"
license = "MIT"
authors = [
    {name = "ev3lynx727"}
]
keywords = ["mcp", "mcp-server", "shellcheck", "shell", "linting", "code-analysis", "ai", "claude", "opencode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<2",
]

[project.urls]
Homepage = "https://github.com/Ev3lynx727/mcp-shellcheck"
Repository = "https://github.com/Ev3lynx727/mcp-shellcheck"
Issues = "https://github.com/Ev3lynx727/mcp-shellcheck/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
shellcheck = [
    "shellcheck-py>=0.11.0",
]

[project.scripts]
shellcheck-mcp-server = "shellcheck_mcp_server:main_sync"

[tool.setuptools]
py-modules = ["shellcheck_mcp_server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shellcheck_mcp_server*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.semantic_release]
version_variable = "shellcheck_mcp_server.py:__version__"
build_command = "uv build"
dist_path = "dist/"
upload_to_pypi = true
upload_to_release = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
